--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p class="two" data-node-name="greetingText">Today is your special day,</p>
     </div>
     <div class="three">
-      <p data-node-name="text1">but since I'm not in the same continent as you, I wondered what I could do to celebrate with you</p>
+      <p data-node-name="text1">but since I cant be next to you I wondered what I could do to celebrate with you</p>
     </div>
     <div class="four">
       <div class="text-box">
@@ -49,52 +49,52 @@
       <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd" data-node-name="wishHeading"></h3>
+        <h5 data-node-name="wishText">)</h5>
       </div>
     </div>
     <div class="seven">
-      <div class="baloons">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
+      <div class="hearts">
         <img src="img/heart1.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
+        <img src="img/heart3.svg" alt="">
+        <img src="img/heart1.svg" alt="">
+        <img src="img/heart1.svg" alt="">
+        <img src="img/heart3.svg" alt="">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
+        <img src="img/heart3.svg" alt="">
+        <img src="img/heart1.svg" alt="">
+        <img src="img/heart3.svg" alt="">
         <img src="img/heart2.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
         <img src="img/heart1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
         <img src="img/heart1.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
+        <img src="img/heart3.svg" alt="">
+        <img src="img/heart3.svg" alt="">
+        <img src="img/heart1.svg" alt="">
         <img src="img/heart2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
+        <img src="img/heart3.svg" alt="">
         <img src="img/heart2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
+        <img src="img/heart3.svg" alt="">
         <img src="img/heart2.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
+        <img src="img/heart3.svg" alt="">
         <img src="img/heart1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
         <img src="img/heart1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart1.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart1.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart3.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart3.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart1.svg" alt="">
+        <img src="img/heart3.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart1.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart3.svg" alt="">
         <img src="img/heart2.svg" alt="">
       </div>
     </div>
