--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="greeting">Hi</span>
-        <span data-node-name="name">Babe</span>
+        <span data-node-name="greeting">My</span>
+        <span data-node-name="name">Babygirl</span>
       </h1>
       <p class="two" data-node-name="greetingText">Today is your special day,</p>
     </div>
@@ -37,8 +37,8 @@
         <strong data-node-name="text4Adjective">special</strong>.</p>
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
-        <span data-node-name="text5Content">You are Special</span>
-        <span class="smiley" data-node-name="smiley"><3</span>
+        <span data-node-name="text5Content">You are special</span>
+        <span class="smiley" data-node-name="smiley">&lt3</span>
       </p>
       <p class="idea-6">
         <span data-node-name="bigTextPart1">S</span>
@@ -50,7 +50,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading"></h3>
-        <h5 data-node-name="wishText">)</h5>
+        <h5 data-node-name="wishText"></h5>
       </div>
     </div>
     <div class="seven">
