--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
       <p class="two" data-node-name="greetingText">Today is your special day,</p>
     </div>
     <div class="three">
-      <p data-node-name="text1">but since I cant be next to you,</p>
-    </div>
-    <div class="threepointfive">
-      <p data-node-name="text1"> I wondered what I could do to celebrate with you</p>
+      <p data-node-name="text1">but since I cant be next to you, I wondered what I could do to celebrate with you</p>
     </div>
     <div class="four">
       <div class="text-box">
