--- a/index.html
+++ b/index.html
@@ -25,19 +25,20 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">How to send a birthday card to Japan</p>
+        <p class="hbd-chatbox" data-node-name="textInChatBox">How to send a birthday card to Japan????</p>
         <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
       </div>
     </div>
     <div class="five">
       <p class="idea-1" data-node-name="text2">That's what I was going to do.</p>
-      <p class="idea-2" data-node-name="text3">But then I stopped.</p>
+      <p class="idea-2" data-node-name="text3">But that would have never been enough.</p>
       <p class="idea-3">
         <span data-node-name="text4">I realised, I wanted to do something</span>
         <strong data-node-name="text4Adjective">special</strong>.</p>
-      <p class="idea-4" data-node-name="text5Entry">Because,</p>
+      <p class="idea-4" data-node-name="text5Entry">because,</p>
+      <p class="idea-4.5" data-node-name="text5Entry">to me,</p>
       <p class="idea-5">
-        <span data-node-name="text5Content">You are special</span>
+        <span data-node-name="text5Content">you are special</span>
         <span class="smiley" data-node-name="smiley">&lt3</span>
       </p>
       <p class="idea-6">
@@ -55,46 +56,37 @@
     </div>
     <div class="seven">
       <div class="hearts">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart3.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart3.svg" alt="">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
-        <img src="img/heart1.svg" alt="">
-        <img src="img/heart3.svg" alt="">
         <img src="img/heart2.svg" alt="">
-        <img src="img/heart1.svg" alt="">
         <img src="img/heart2.svg" alt="">
-        <img src="img/heart3.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
       </div>
     </div>
