--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="" alt="" class="" data-node-name="imagePath">
+      <img src="" alt="" class="">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading"></h3>
         <h5 data-node-name="wishText"></h5>
