--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday Babe <3 </title>
+  <title>Happy Birthday!!! :)</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -15,31 +15,30 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="greeting">My</span>
-        <span data-node-name="name">Babygirl</span>
+        <span data-node-name="greeting">Babygirl</span>
+        <span data-node-name="name">&lt3</span>
       </h1>
-      <p class="two" data-node-name="greetingText">Today is your special day,</p>
+      <p class="two" data-node-name="greetingText">here's a little present babe</p>
     </div>
     <div class="three">
-      <p data-node-name="text1">but since I cant be next to you, I wondered what I could do to celebrate with you</p>
+      <p data-node-name="text1">It's your special day</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">How to send a birthday card to Japan????</p>
+        <p class="hbd-chatbox" data-node-name="textInChatBox">How to send a postcard to Japan</p>
         <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
       </div>
     </div>
     <div class="five">
       <p class="idea-1" data-node-name="text2">That's what I was going to do.</p>
-      <p class="idea-2" data-node-name="text3">But that would have never been enough.</p>
+      <p class="idea-2" data-node-name="text3">But then I stopped.</p>
       <p class="idea-3">
         <span data-node-name="text4">I realised, I wanted to do something</span>
         <strong data-node-name="text4Adjective">special</strong>.</p>
-      <p class="idea-4" data-node-name="text5Entry">because,</p>
-      <p class="idea-4.5" data-node-name="text6Entry">to me,</p>
+      <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
-        <span data-node-name="text5Content">you are special</span>
-        <span class="smiley" data-node-name="smiley">&lt3</span>
+        <span data-node-name="text5Content">You are Special</span>
+        <span class="smiley" data-node-name="smiley">:)</span>
       </p>
       <p class="idea-6">
         <span data-node-name="bigTextPart1">S</span>
@@ -47,15 +46,15 @@
       </p>
     </div>
     <div class="six">
-      <img src="" alt="" class="" data-node-name="imagePath">
-      <img src="" alt="" class="">
+      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath">
+      <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd" data-node-name="wishHeading"></h3>
-        <h5 data-node-name="wishText"></h5>
+        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
+        <h5 data-node-name="wishText">I hope you acheive everything you wish for this year babe</h5>
       </div>
     </div>
     <div class="seven">
-      <div class="hearts">
+      <div class="baloons">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
@@ -83,11 +82,7 @@
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart2.svg" alt="">
+        
       </div>
     </div>
     <div class="eight">
@@ -122,7 +117,7 @@
     <div class="nine">
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
-      <p class="last-smile" data-node-name="outroSmiley">lt&3</p>
+      <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
 </body>
