--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Lydia</span>
+        <span data-node-name="greeting">Babygirl</span>
+        <span data-node-name="name">&lt3</span>
       </h1>
-      <p class="two" data-node-name="greetingText">I really like your name btw!</p>
+      <p class="two" data-node-name="greetingText">here's a little present babe</p>
     </div>
     <div class="three">
-      <p data-node-name="text1">It's your birthday!!! :D</p>
+      <p data-node-name="text1">It's your special day</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox" data-node-name="textInChatBox">How to send a postcard to Japan</p>
         <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
       </div>
     </div>
@@ -50,44 +50,39 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 data-node-name="wishText">I hope you acheive everything you wish for this year</h5>
       </div>
     </div>
     <div class="seven">
       <div class="baloons">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        <img src="img/heart2.svg" alt="">
+        
       </div>
     </div>
     <div class="eight">
