--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
+  <title>Happy Birthday Babygirl lt&3</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -38,7 +38,7 @@
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
         <span data-node-name="text5Content">You are Special</span>
-        <span class="smiley" data-node-name="smiley">:)</span>
+        <span class="smiley" data-node-name="smiley">lt&3</span>
       </p>
       <p class="idea-6">
         <span data-node-name="bigTextPart1">S</span>
@@ -46,11 +46,18 @@
       </p>
     </div>
     <div class="six">
+      
+<div class="candles">
+  <div class="fire"></div>
+  <div class="fire"></div>
+  <div class="fire"></div>
+  <div class="fire"></div>
+  <div class="fire"></div>
+</div>
       <img src="img/cake.svg" alt="" class="lydia-dp" data-node-name="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">I hope you acheive everything you wish for this</h5>
+        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday Babe!</h3>
+        <h5 data-node-name="wishText">something cute</h5>
       </div>
     </div>
     <div class="seven">
@@ -117,7 +124,7 @@
     <div class="nine">
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
-      <p class="last-smile" data-node-name="outroSmiley">:)</p>
+      <p class="last-smile" data-node-name="outroSmiley">lt&3</p>
     </div>
   </div>
 </body>
