--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday Babygirl lt&3</title>
+  <title>Happy Birthday Babygirl <3</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -38,7 +38,7 @@
       <p class="idea-4" data-node-name="text5Entry">Because,</p>
       <p class="idea-5">
         <span data-node-name="text5Content">You are Special</span>
-        <span class="smiley" data-node-name="smiley">lt&3</span>
+        <span class="smiley" data-node-name="smiley"><3</span>
       </p>
       <p class="idea-6">
         <span data-node-name="bigTextPart1">S</span>
