--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   <div class="fire"></div>
   <div class="fire"></div>
   <div class="fire"></div>
-</div>
       <img src="img/cake.svg" alt="" class="lydia-dp" data-node-name="imagePath">
+    </div>
       <div class="wish">
-        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday Babe!</h3>
-        <h5 data-node-name="wishText">something cute</h5>
+        <h3 class="wish-hbd" data-node-name="wishHeading">Babygirl</h3>
+        <h5 data-node-name="wishText">Happy 21th Birthday </h5>
       </div>
     </div>
     <div class="seven">
