--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
         <span data-node-name="bigTextPart2">O</span>
       </p>
     </div>
+
     <div class="six">
-      
 <div class="candles">
   <div class="fire"></div>
   <div class="fire"></div>
   <div class="fire"></div>
   <div class="fire"></div>
   <div class="fire"></div>
-      <img src="img/cake.svg" alt="" class="lydia-dp" data-node-name="imagePath">
+  </div>
+  <div>
+      <img src="img/cake.svg" alt="" class="cake" data-node-name="imagePath">
     </div>
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Babygirl</h3>
@@ -62,10 +64,6 @@
     </div>
     <div class="seven">
       <div class="baloons">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart2.svg" alt="">
-        <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
@@ -124,7 +122,7 @@
     <div class="nine">
       <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
       <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
-      <p class="last-smile" data-node-name="outroSmiley">lt&3</p>
+      <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
 </body>
