--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="seven">
-      <div class="baloons">
+      <div class="hearts">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
