--- a/index.html
+++ b/index.html
@@ -118,11 +118,16 @@
       </svg>
     </div>
     <div class="nine">
-      <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
-      <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
+      <p data-node-name="outroText">Woo!! Hope you made a wish babe </p>
+      <p id="replay" data-node-name="replayText">Click here for your next surprise</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
+  <!-- <div class="ten">
+    <video width="320" height="240" controls>
+      <source src="movie.mp4" type="video/mp4">    
+    </video>
+  </div> -->
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
