--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p class="idea-3">
         <span data-node-name="text4">I realised, I wanted to do something</span>
         <strong data-node-name="text4Adjective">special</strong>.</p>
-      <p class="idea-4" data-node-name="text5Entry">Because,</p>
+      <p class="idea-4" data-node-name="text5Entry">because,</p>
       <p class="idea-5">
         <span data-node-name="text5Content">You are Special</span>
         <span class="smiley" data-node-name="smiley"><3</span>
@@ -119,15 +119,11 @@
     </div>
     <div class="nine">
       <p data-node-name="outroText">Woo!! Hope you made a wish babe </p>
-      <p id="replay" data-node-name="replayText">Click here for your next surprise</p>
+      <p id="replay" data-node-name="replayText">Click to replay</p>
+      <p href="https://youtu.be/b6xFoLf1oDY">Click here for your next surprise</a>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
-  </div>
-  <!-- <div class="ten">
-    <video width="320" height="240" controls>
-      <source src="movie.mp4" type="video/mp4">    
-    </video>
-  </div> -->
+  </div>   
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
