--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
       </svg>
     </div>
     <div class="nine">
-      <p data-node-name="outroText">Woo!! Hope you made a wish babe </p>
-      <p id="replay" data-node-name="replayText">Click to replay</p>
-      <p href="https://youtu.be/b6xFoLf1oDY">Click here for your next surprise</a>
-      <p class="last-smile" data-node-name="outroSmiley">:)</p>
-    </div>
-  </div>   
+      <p data-node-name="outroText">Woo!! Hope you made a wish babe</p>    
+        <iframe width="420" height="345" src="https://www.youtube.com/embed/b6xFoLf1oDY">
+          </iframe>
+      </div>
+      </div>   
 </body>
+
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
