--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="nine">
       <p data-node-name="outroText">Woo!! Hope you made a wish babe</p>    
       <p> No I didn't forget about your birthday song </p>
-        <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
+        <iframe width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
         </div>
       </div>
