--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <span data-node-name="greeting">Babygirl</span>
         <span data-node-name="name">&lt3</span>
       </h1>
-      <p class="two" data-node-name="greetingText">here's a little present babe</p>
+      <p class="two" data-node-name="greetingText">here's your present babe</p>
     </div>
     <div class="three">
-      <p data-node-name="text1">It's your special day</p>
+      <p data-node-name="text1">Today is your special day!</p>
     </div>
     <div class="four">
       <div class="text-box">
