--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday Babygirl <3</title>
+  <title>Happy Birthday Babygirl 1 <3</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -54,8 +54,8 @@
   <div class="fire"></div>
   <div class="fire"></div>
   </div>
+    <div><img src="img/babe.png" alt="" class="babe" data-node-name="imagePath"></div>
   <div>
-    <img src="img/babe.png" alt="" class="babe" data-node-name="imagePath">
       <img src="img/cake.svg" alt="" class="cake" data-node-name="imagePath">
     </div>
       <div class="wish">
@@ -121,7 +121,7 @@
     <div class="nine">
       <p data-node-name="outroText">Woo!! Hope you made a wish babe</p>    
       <p> No I didn't forget about your birthday song </p>
-        <iframe width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
+        <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
         </div>
       </div>
