--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       </svg>
     </div>
     <div class="nine">
-      <p data-node-name="outroText">Woo!! Hope you made a wish babe</p>    
-      <p> No I didn't forget about your birthday song </p>
+      <p data-node-name="outroText">Woo!! Hope you made a wish babe <br>   
+      No I didn't forget about your birthday song </p>
         <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
         </div>
