--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <span data-node-name="greeting">Babygirl</span>
         <span data-node-name="name">&lt3</span>
       </h1>
-      <p class="two" data-node-name="greetingText">here's your present babe</p>
+      <p class="two" data-node-name="greetingText">Happy birthday to you</p>
     </div>
     <div class="three">
       <p data-node-name="text1">Today is your special day!</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">How to send a postcard to Japan</p>
+        <p class="hbd-chatbox" data-node-name="textInChatBox">How to send a card to Japan</p>
         <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
       </div>
     </div>
