--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p class="idea-3">
         <span data-node-name="text4">I realised, I wanted to do something</span>
         <strong data-node-name="text4Adjective">special</strong></p>
-      <p class="idea-4" data-node-name="text5Entry">because,</p>
+      <p class="idea-4" data-node-name="text5Entry">because</p>
       <p class="idea-5">
         <span data-node-name="text5Content">You are Special</span>
         <span class="smiley" data-node-name="smiley"><3</span>
@@ -84,8 +84,6 @@
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
         <img src="img/heart2.svg" alt="">
-      
-        
       </div>
     </div>
     <div class="eight">
@@ -118,16 +116,13 @@
       </svg>
     </div>
     <div class="nine">
-      <p data-node-name="outroText">Woo!! Hope you made a wish babe <br>   
-      No I didn't forget about your birthday song </p>
+      <p class="outroText" data-node-name="outroText"> Woo!! Hope you made a wish babe<br>No I didn't forget about your birthday song </p>
         <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
         </div>
       </div>
       </div>   
 </body>
-
-
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
