--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Happy Birthday Babygirl <3</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
   <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -31,7 +31,7 @@
     </div>
     <div class="five">
       <p class="idea-1" data-node-name="text2">That's what I was going to do.</p>
-      <p class="idea-2" data-node-name="text3">But then I stopped.</p>
+      <p class="idea-2" data-node-name="text3">But you deserve my best.</p>
       <p class="idea-3">
         <span data-node-name="text4">I realised, I wanted to do something</span>
         <strong data-node-name="text4Adjective">special</strong></p>
@@ -116,7 +116,11 @@
       </svg>
     </div>
     <div class="nine">
-      <p class="outroText" data-node-name="outroText"> Woo!! Hope you made a wish babe<br>No I didn't forget about your birthday song </p>
+      <p class="line1"> Woo!! Hope you made a wish babe</p>
+      <p class="line2">I think you&aposre so adorable and cute</p>
+        <p class="line3"> For you I&aposd do anything</p>
+        <p class="line4"> So don&apost think I&aposve forgotten, </p>
+        <p class="line5"> Here is your song </p>
         <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
         </div>
@@ -127,4 +131,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
 
-</html>
+</html> b 
