--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
       </svg>
     </div>
     <div class="nine">
-      <p class="line1"> Woo!! Hope you made a wish babe</p>
+      <!-- <p class="line1"> Woo!! Hope you made a wish babe</p>
       <p class="line2">I think you&aposre so adorable and cute</p>
         <p class="line3"> For you I&aposd do anything</p>
-        <p class="line4"> So don&apost think I&aposve forgotten,</p>
-        <p class="line5"> Here is your song </p>
+        <p class="line4"> So don&apost think I&aposve forgotten</p>
+        <p class="line5"> Here is your song </p> -->
         <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
         </div>
