--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday Babygirl <3</title>
+  <title>Happy Birthday Babygirl1 <3</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
   <link rel="stylesheet" href="style/style.css">
@@ -117,9 +117,9 @@
     </div>
     <div class="nine">
       <p class="line1"> Woo!! Hope you made a wish babe</p>
-      <p class="line2">I think you&aposre so adorable and cute</p>
-        <p class="line3"> For you I&aposd do anything</p>
-        <p class="line4"> So don&apost think I&aposve forgotten</p>
+      <p class="line2">I think you're so adorable and cute</p>
+        <p class="line3"> For you I'd do anything</p>
+        <p class="line4"> So don't think I've forgotten</p>
         <p class="line5"> Here is your song </p>
         <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
