--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
       </svg>
     </div>
     <div class="nine">
-      <p class="line1"> Woo!! Hope you made a wish babe</p>
-      <p class="line2">I think you're so adorable and cute</p>
+        <!-- <p class="line1"> Woo!! Hope you made a wish babe</p>
+        <p class="line2">I think you're so adorable and cute</p>
         <p class="line3"> For you I'd do anything</p>
         <p class="line4"> So don't think I've forgotten</p>
-        <p class="line5"> Here is your song </p>
+        <p class="line5"> Here is your song </p> -->
         <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
         </div>
-      </div>
+  </div>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
 
-</html> b 
+</html>
