--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday Babygirl<3</title>
+  <title>Happy Birthday Babygirl <3</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
   <link rel="stylesheet" href="style/style.css">
-
+</head>
 
 <body>
   <div class="container">
@@ -116,18 +116,15 @@
       </svg>
     </div>
     <div class="nine">
-        <!-- <p class="line1"> Woo!! Hope you made a wish babe</p>
-        <p class="line2">I think you're so adorable and cute</p>
-        <p class="line3"> For you I'd do anything</p>
-        <p class="line4"> So don't think I've forgotten</p>
-        <p class="line5"> Here is your song </p> -->
+      <p class="outroText" data-node-name="outroText"> Woo!! Hope you made a wish babe <br> No I didn't forget about your birthday song </p>
         <iframe class="song" width="700" height="600" src="https://www.youtube.com/embed/b6xFoLf1oDY">
           </iframe>
         </div>
-  </div>
+      </div>
+      </div>   
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
 <script type="application/javascript" src="script/main.js"></script>
-</head>
-</html>
+
+</html> b 
