--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <strong data-node-name="text4Adjective">special</strong></p>
       <p class="idea-4" data-node-name="text5Entry">because</p>
       <p class="idea-5">
-        <span data-node-name="text5Content">You are Special</span>
+        <span data-node-name="text5Content">You are Special <br>For you I’d do anything</span>
         <span class="smiley" data-node-name="smiley"><3</span>
       </p>
       <p class="idea-6">
